Update and rename index.html to page1.html

--- a/page1.html
+++ b/page1.html
@@ -1,14 +1,15 @@
+<!-- page1.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Мой Красивый Сайт</title>
+  <title>Страница 1</title>
 </head>
 <body>
   <header>
-    <h1>Мой Красивый Сайт</h1>
+    <h1>Страница 1</h1>
     <nav>
       <a href="index.html">Главная</a>
       <a href="page1.html">Страница 1</a>
@@ -17,11 +18,7 @@
     </nav>
   </header>
   <section class="main-content">
-    <div class="main-text">
-      <h2>Добро пожаловать!</h2>
-      <p>Здесь вы найдете удивительные контент и красивый дизайн.</p>
-    </div>
-    <img src="beautiful-image.jpg" alt="Beautiful Image">
+    <p>Добро пожаловать на страницу 1!</p>
   </section>
 </body>
 </html>
