--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <header>
     <h1>Мой Красивый Сайт</h1>
     <nav>
-      <a href="index.html">Главная</a>
-      <a href="page1.html">Страница 1</a>
+      <a href="https://dzundzunbaba.github.io/cautious-telegram/">Главная</a>
+      <a href="https://dzundzunbaba.github.io/symmetrical-doodle/">Страница 1</a>
       <a href="page2.html">Страница 2</a>
       <a href="page3.html">Страница 3</a>
     </nav>
