--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Мой Красивый Сайт</title>
+  <title>Страница 1</title>
 </head>
 <body>
   <header>
-    <h1>Мой Красивый Сайт</h1>
+    <h1>Страница 1</h1>
     <nav>
       <a href="https://dzundzunbaba.github.io/cautious-telegram/">Главная</a>
       <a href="https://dzundzunbaba.github.io/symmetrical-doodle/">Страница 1</a>
@@ -17,11 +17,22 @@
     </nav>
   </header>
   <section class="main-content">
-    <div class="main-text">
-      <h2>Добро пожаловать!</h2>
-      <p>Здесь вы найдете удивительные контент и красивый дизайн.</p>
+    <div class="block">
+      <h2>Блок 1</h2>
+      <img src="page1_image1.jpg" alt="Image 1">
+      <p>Описание блока 1 на странице 1. Здесь интересные вещи.</p>
     </div>
-    <img src="beautiful-image.jpg" alt="Beautiful Image">
+    <div class="block">
+      <h2>Блок 2</h2>
+      <img src="page1_image2.jpg" alt="Image 2">
+      <p>Описание блока 2 на странице 1. Это место для вдохновения.</p>
+    </div>
+    <div class="block">
+      <h2>Блок 3</h2>
+      <img src="page1_image3.jpg" alt="Image 3">
+      <p>Описание блока 3 на странице 1. Интересный контент ждет вас.</p>
+    </div>
   </section>
 </body>
 </html>
+
