--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Страница 1</title>
+  <title>Мой Красивый Сайт</title>
 </head>
 <body>
   <header>
-    <h1>Страница 1</h1>
+    <h1>Мой Красивый Сайт</h1>
     <nav>
-      <a href="https://dzundzunbaba.github.io/cautious-telegram/">Главная</a>
-      <a href="https://dzundzunbaba.github.io/symmetrical-doodle/">Страница 1</a>
+      <a href="index.html">Главная</a>
+      <a href="page1.html">Страница 1</a>
       <a href="page2.html">Страница 2</a>
       <a href="page3.html">Страница 3</a>
     </nav>
@@ -19,20 +19,24 @@
   <section class="main-content">
     <div class="block">
       <h2>Блок 1</h2>
-      <img src="page1_image1.jpg" alt="Image 1">
-      <p>Описание блока 1 на странице 1. Здесь интересные вещи.</p>
+      <img src="image1.jpg" alt="Image 1">
+      <p>Описание блока 1. Здесь интересные вещи.</p>
     </div>
     <div class="block">
       <h2>Блок 2</h2>
-      <img src="page1_image2.jpg" alt="Image 2">
-      <p>Описание блока 2 на странице 1. Это место для вдохновения.</p>
+      <img src="image2.jpg" alt="Image 2">
+      <p>Описание блока 2. Это место для вдохновения.</p>
     </div>
     <div class="block">
       <h2>Блок 3</h2>
-      <img src="page1_image3.jpg" alt="Image 3">
-      <p>Описание блока 3 на странице 1. Интересный контент ждет вас.</p>
+      <img src="image3.jpg" alt="Image 3">
+      <p>Описание блока 3. Интересный контент ждет вас.</p>
+    </div>
+    <div class="block">
+      <h2>Блок 4</h2>
+      <img src="image4.jpg" alt="Image 4">
+      <p>Описание блока 4. Вас ждет еще больше удивительного контента.</p>
     </div>
   </section>
 </body>
 </html>
-
