--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
       <h2>Блок 1</h2>
       <img src="image1.jpg" alt="Image 1">
       <p>Описание блока 1. Здесь интересные вещи.</p>
-      <a href="page1.html" class="btn">Перейти</a>
+      <a href="page1.html" class=".btn">Перейти</a>
     </div>
     <div class="block">
       <h2>Блок 2</h2>
       <img src="image2.jpg" alt="Image 2">
       <p>Описание блока 2. Это место для вдохновения.</p>
-      <a href="page2.html" class="btn">Перейти</a>
+      <a href="page2.html" class=".btn">Перейти</a>
     </div>
     <div class="block">
       <h2>Блок 3</h2>
       <img src="image3.jpg" alt="Image 3">
       <p>Описание блока 3. Интересный контент ждет вас.</p>
-      <a href="page3.html" class="btn">Перейти</a>
+      <a href="page3.html" class=".btn">Перейти</a>
     </div>
     <div class="block">
       <h2>Блок 4</h2>
       <img src="image4.jpg" alt="Image 4">
       <p>Описание блока 4. Вас ждет еще больше удивительного контента.</p>
-      <a href="page4.html" class="btn">Перейти</a>
+      <a href="page4.html" class=".btn">Перейти</a>
     </div>
   </section>
 </body>
