--- a/index.html
+++ b/index.html
@@ -10,35 +10,29 @@
   <header>
     <h1>Мой Красивый Сайт</h1>
     <nav>
-      <a href="index.html">Главная</a>
-      <a href="page1.html">Страница 1</a>
-      <a href="page2.html">Страница 2</a>
-      <a href="page3.html">Страница 3</a>
     </nav>
   </header>
   <section class="main-content">
     <div class="block">
-      <h2>Блок 1</h2>
+      <h2>Глава 1</h2>
       <img src="image1.jpg" alt="Image 1">
-      <p>Описание блока 1. Здесь интересные вещи.</p>
       <a href="page1.html" class=".btn">Перейти</a>
     </div>
     <div class="block">
-      <h2>Блок 2</h2>
+      <h2>Глава 2</h2>
       <img src="image2.jpg" alt="Image 2">
-      <p>Описание блока 2. Это место для вдохновения.</p>
+      <p>Лазер.</p>
       <a href="page2.html" class=".btn">Перейти</a>
     </div>
     <div class="block">
-      <h2>Блок 3</h2>
+      <h2>Глава 3</h2>
       <img src="image3.jpg" alt="Image 3">
       <p>Описание блока 3. Интересный контент ждет вас.</p>
       <a href="page3.html" class=".btn">Перейти</a>
     </div>
     <div class="block">
-      <h2>Блок 4</h2>
+      <h2>Заключение</h2>
       <img src="image4.jpg" alt="Image 4">
-      <p>Описание блока 4. Вас ждет еще больше удивительного контента.</p>
       <a href="page4.html" class=".btn">Перейти</a>
     </div>
   </section>
