--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Мой Красивый Сайт</title>
+  <title>"Изобретения и открытия из фантастических рассказов в реальности"</title>
 </head>
 <body>
   <header>
-    <h1>Мой Красивый Сайт</h1>
+    <h1></h1>
     <nav>
     </nav>
   </header>
