--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   <section class="main-content">
     <div class="block">
       <h2>Глава 1</h2>
+      <p>Лазер</p>
       <img src="image1.jpg" alt="Image 1">
       <a href="page1.html" class=".btn">Перейти</a>
     </div>
     <div class="block">
       <h2>Глава 2</h2>
       <img src="image2.jpg" alt="Image 2">
-      <p>Лазер.</p>
+      <p>Подводная лодка</p>
       <a href="page2.html" class=".btn">Перейти</a>
     </div>
     <div class="block">
