--- a/index.html
+++ b/index.html
@@ -8,31 +8,32 @@
 </head>
 <body>
   <header>
-    <h1></h1>
+    <h1>"Изобретения и открытия из фантастических рассказов в реальности"</h1>
     <nav>
     </nav>
   </header>
   <section class="main-content">
     <div class="block">
-      <h2>Глава 1</h2>
-      <p>Лазер</p>
+      <h2>Введение</h2>
+      <p></p>
       <img src="image1.jpg" alt="Image 1">
       <a href="page1.html" class=".btn">Перейти</a>
     </div>
     <div class="block">
-      <h2>Глава 2</h2>
+      <h2>Глава 1</h2>
       <img src="image2.jpg" alt="Image 2">
-      <p>Подводная лодка</p>
+      <p>Лазер</p>
       <a href="page2.html" class=".btn">Перейти</a>
     </div>
     <div class="block">
-      <h2>Глава 3</h2>
+      <h2>Глава 2</h2>
       <img src="image3.jpg" alt="Image 3">
-      <p>Описание блока 3. Интересный контент ждет вас.</p>
+      <p>Подводная лодка</p>
       <a href="page3.html" class=".btn">Перейти</a>
     </div>
     <div class="block">
       <h2>Заключение</h2>
+      <p></p>
       <img src="image4.jpg" alt="Image 4">
       <a href="page4.html" class=".btn">Перейти</a>
     </div>
