--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </nav>
   </header>
   <section class="main-content">
-    <div class="block">
+    /<div class="block">
       <h2>Введение</h2>
       <p></p>
       <img src="image1.jpg" alt="Image 1">
       <a href="page1.html" class=".btn">Перейти</a>
-    </div>
+    </div>/
     <div class="block">
       <h2>Глава 1</h2>
       <img src="image2.jpg" alt="Image 2">
