--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
 Научная фантастика (англ. Science Fiction) — это литературный жанр, включающий в себя произведения, основанные на рациональных гипотезах в области науки и техники, буквально или метафорически осмысляющие проблемы взаимодействия человека и технологий, науки и природы. (https://bigenc.ru/c/nauchnaia-fantastika-v-literature-aa3800) Принято считать, что формирование и развитие научной фантастики, как самостоятельного литературного жанра, приходится на 2-ю половину 19 – начало технической инновации или фантастического изобретения/открытия, которое отсутствует или существенно отличается от привычного автору и читателю мира, в связи с чем литературные произведения в жанре научной фантастики становятся  источником идей для ученых в различных областях науки и техники, в т.ч. в физике, часть которых уже  реализована и используется в современном мире, либо находится на стадии научного изучения и разработки. 
 <p>Актуальность: о влиянии произведений художественной фантастики писали многие ученые и изобретатели, вспоминая, что первый толчок в их деятельности им дала научная фантастика, прочитанная ими еще в юности. Например, К. Э. Циолковский (1857-1935 г.г.) говорил, что стремление к космическим путешествиям было заложено в нем «известным фантазером» Жюлем Верном. Французский инженер А. Лебеф (1864-1939) считал Ж. Верна своим соавтором в разработке конструкции двойного корпуса подводной лодки, а для академика Жоржа Клода (1870-1960) роман «Двадцать тысяч лье под водой», дал толчок в изобретении аппарата, позволяющего получать электроэнергию из океана за счет проводников, погруженных в морскую воду на разные глубины. Связь между фантазией в научной фантастике и открытиями и изобретениями, сделанными учеными и инженерами в различных областях жизнедеятельности человека наиболее точно отображают слова К. Э. Циолковского: «Сначала неизбежно идут: мысль, фантазия, сказка. За ними шествует научный расчет. И уже в конце концов исполнение венчает мысль».</p>
 <p>Цель проекта: изучить отдельные литературные произведения, относящиеся к литературному жанру научной фантастики, и определить в чем вымысел авторов опередил технологическое развитие и тем самым вдохновил ученых и инженеров на научные открытия и разработки.</p>
-<p>Задачи: 
-1.	Подобрать произведения различных авторов, в которых речь идет об изобретениях, которые отсутствуют или существенно отличается от того, что было известно миру на момент написания литературного произведения.
-2.	Рассмотреть, как описанные в литературном произведении изобретения с точки зрения физики были воплощены в реальность.
-3.	Разработать сайт по теме проекта. </p>
+<p>
+Задачи: 
+  <ol>
+	  <li>Подобрать произведения различных авторов, в которых речь идет об изобретениях, которые отсутствуют или существенно отличается от того, что было известно миру на момент написания литературного произведения.</li>
+	  <li>Рассмотреть, как описанные в литературном произведении изобретения с точки зрения физики были воплощены в реальность.</li>
+	  <li></li>Разработать сайт по теме проекта.</li>
+  </ol>
+</p>
 
    
   </section>
