--- a/index.html
+++ b/index.html
@@ -13,18 +13,7 @@
     </nav>
   </header>
   <section class="main-content">
-    <div class="block">
-      <h2>Глава 1</h2>
-      <img src="image2.jpg" alt="Image 2">
-      <p>Лазер</p>
-      <a href="page2.html" class=".btn">Перейти</a>
-    </div>
-    <div class="block">
-      <h2>Глава 2</h2>
-      <img src="image3.jpg" alt="Image 3">
-      <p>Подводная лодка</p>
-      <a href="page3.html" class=".btn">Перейти</a>
-    </div>
+
     <p>
       20 вв. и связано с технологическими и социокультурными изменениями жизни людей. В России обозначение «научная фантастика» появляется в 1910-х гг., в международном контексте распространение получил термин «science fiction», который появляется в США в 1920-х гг. Повествование в научной фантастике строится вокруг научно- Источником идей, положенных в основу научного поиска и научных открытий, как правило, является наблюдение или практический опыт человека. Например, всем известна ставшая легендой, история открытия Архимедом закона о выталкивающей силе. послужившего основой гидростатики. Однажды царь Сиракуз Гиерон II обратился к Архимеду с просьбой установить, действительно ли его корона выполнена из чистого золота, как утверждал ювелир. Царь подозревал, что мастер часть драгоценного металла заменил серебром. Поскольку в то время не существовало способов определить химический состав металлического сплава, задача поставила Архимеда в тупик. В процессе поиска ответа на вопрос Архимед, находясь в бане, лёг в ванну до краёв, наполненную водой. Наблюдение за вытекающей из ванны водой, навели Архимеда на мысль, проверить равен ли объем вытекшей жидкости весу погруженного в воду предмета. Ученый взял корону и слиток золота, который весил столько, сколько кузнецу дали для изготовления короны. Он опустил в воду поочередно эти предметы и выяснил, что корона вытесняет больше воды, чем слиток, несмотря на одинаковый вес. А значит, в сплав кузнец добавил более легкое серебро. Как гласит легенда, так был открыт известный всем закон Архимеда: «На тело, погруженное в жидкость или газ, действует подъемная, она же выталкивающая сила (сила Архимеда), равная весу вытесненного объема жидкости или газа», ставший основой гидростатики (раздела физики, изучающего законы равновесия и движения жидкостей, а также их применение в различных технических устройствах).
 К числу источников, вдохновляющих ученых на научный прогресс, относят и такой жанр литературы, как научная фантастика.
@@ -36,9 +25,22 @@
   <ol>
 	  <li>Подобрать произведения различных авторов, в которых речь идет об изобретениях, которые отсутствуют или существенно отличается от того, что было известно миру на момент написания литературного произведения.</li>
 	  <li>Рассмотреть, как описанные в литературном произведении изобретения с точки зрения физики были воплощены в реальность.</li>
-	  <li></li>Разработать сайт по теме проекта.</li>
+	  <li>Разработать сайт по теме проекта.</li>
   </ol>
 </p>
+
+<div class="block">
+      <h2>Глава 1</h2>
+      <img src="image2.jpg" alt="Image 2">
+      <p>Лазер</p>
+      <a href="page2.html" class=".btn">Перейти</a>
+</div>
+<div class="block">
+      <h2>Глава 2</h2>
+      <img src="image3.jpg" alt="Image 3">
+      <p>Подводная лодка</p>
+      <a href="page3.html" class=".btn">Перейти</a>
+</div>
 
    
   </section>
